# data_generator

./: README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
data_generator/: data_generator.py
tests/: test_meta_faker.py
tests/data/output/: seed_test.csv
